# ocicrypt-rs

./: Cargo.toml  README.md  build.rs
data/: generate_keys.md
docs/: pkcs11.md
scripts/: softhsm_setup
src/: config.rs  encryption.rs  helpers.rs  lib.rs  ors_error.rs  pkcs11_uri_wrapped.rs  softhsm.rs  utils.rs
src/keywrap/: keyprovider.rs  mod.rs
src/keywrap/pkcs11/: mod.rs
src/utils/: delayedreader.rs  delayedreader_test.rs  ioutils.rs  keyprovider.rs  mod.rs  softhsm.rs  utils.rs
src/utils/grpc/: keyprovider.rs  mod.rs
src/utils/pkcs11/: mod.rs
src/utils/ttrpc/: keyprovider.rs  keyprovider_ttrpc.rs  mod.rs
