[package]
name = "ocicrypt-rs"
version = "0.1.0"
description = "the OCI image spec implementation of container image encryption"
repository = "https://github.com/containers/ocicrypt-rs"
readme = "README.md"
license = "Apache-2.0"
authors = ["The ocicrypt Authors"]
edition = "2018"

[features]
default = ["keywrap-jwe"]
keywrap-jwe = []

[dependencies]
anyhow = ">=1.0"
josekit = ">=0.7"
pkcs11 = ">=0.5.0"
pkcs11-uri = ">=0.1.2"
serde_yaml = ">=0.8.7"
serde = ">=1.0.126"
serde_derive = ">=1.0.126"
serde_json = ">=1.0.64"
base64 = ">=0.13.0"
http = ">=0.2.4"
